// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 renders h1 with plaintext 1`] = `
<h1
  class="h1"
>
  Hello
</h1>
`;

exports[`h1 renders h1 with react node 1`] = `
<h1
  class="h1"
>
  <span>
    Hello
  </span>
</h1>
`;

exports[`h2 renders h2 with plaintext 1`] = `
<h2
  class="h2"
>
  Hello
</h2>
`;

exports[`h2 renders h2 with react node 1`] = `
<h2
  class="h2"
>
  <span>
    Hello
  </span>
</h2>
`;

exports[`h3 renders h3 with plaintext 1`] = `
<h3
  class="h3"
>
  Hello
</h3>
`;

exports[`h3 renders h3 with react node 1`] = `
<h3
  class="h3"
>
  <span>
    Hello
  </span>
</h3>
`;

exports[`h4 renders h4 with plaintext 1`] = `
<h4
  class="h4"
>
  Hello
</h4>
`;

exports[`h4 renders h4 with react node 1`] = `
<h4
  class="h4"
>
  <span>
    Hello
  </span>
</h4>
`;

exports[`h5 renders h5 with plaintext 1`] = `
<h5
  class="h5"
>
  Hello
</h5>
`;

exports[`h5 renders h5 with react node 1`] = `
<h5
  class="h5"
>
  <span>
    Hello
  </span>
</h5>
`;

exports[`h6 renders h6 with plaintext 1`] = `
<h6
  class="h6"
>
  Hello
</h6>
`;

exports[`h6 renders h6 with react node 1`] = `
<h6
  class="h6"
>
  <span>
    Hello
  </span>
</h6>
`;

exports[`invalid heading level renders h6 with plaintext 1`] = `
<h6
  class="h6"
>
  Hello
</h6>
`;

exports[`invalid heading level renders h6 with react node 1`] = `
<h6
  class="h6"
>
  <span>
    Hello
  </span>
</h6>
`;
